gramatica.txt


Gramática:
G → SG | CtrlG
S →  VarOps ; | Func ;
Ctrl → IF| Loop

Loop → while(ExpBool) Bloque | do Bloque while(ExpBool); | for(VarAsig; ExpBool; )Bloque

Control:
IF→ if(ExpBool) then Bloque else Bloque
Bloque → S | {G}


Funciones
Func → FuncReturn | FuncVoid
FuncReturn → FuncInt | FuncString | FuncBool
FuncInt → multiplicacionEscalar(Vec, EMat, M) | length(Vec)
FuncString → capitalizar(ExpString)
FuncBool → colineales(Vec,Vec )
FuncVoid → print(V) 

Vectores  y variables
Vec →  var = [Elem] 
Elem→ Valores, Elem | Valores
Valores → EMat | ExpBool | ExpString | VarYVals | FuncReturn
VarYVals → var | VecVal
VecVal →  var M
M → [int] | [int] M
// vec se coloca en el lexer
M → ExpBool | 𝝺


Operaciones binarias enteros:
EMat → EMat + P | EMat - P | P
P → P * Exp | P / Exp | P % Exp | Exp
Exp → Exp ^ ISing | ISing
ISing → -Paren | +Paren | Paren
Paren → (EMat) | int | VarYVals | float | VarsOps | VarYVals | FuncInt

Operaciones con strings
ExpString → ExpString + string | string | VarYVals | FuncString

/* U -> var | var[int] */


Registros:
Reg → {U}
U -> campo: Valores, U | campo: Valores

 alumno = {nombre:"Juan Perez", edad:23};

Operadores de variables:
VarsOps → --SMM | ++SMM | SMM
SMM → VarYVals++ | VarYVals--

 Asignaciones:
VarAsig → SIgual *= Valores | SIgual /= Valores | SIgual
SIgual → Asig += Valores |  Asig -= Valores | Asig
Asig → var = Valores  | var = Valores    | var = Vec          

// (para generar a = b += 1)
//a = v *= [1,2,3]

Op booleanas
ExpBool →O ? ExpBool : ExpBool  | O
Or → Or or And | And
And →  And and Eq | Eq
Eq → Eq == TBool |  Eq != TBool | Mayor 
Mayor → TCompare > TCompare | TCompare >= TCompare | Menor
Menor → TCompare < TCompare | TCompare <= TCompare | Not 
// (not 1 < 2 != not (1 < 2))
Not →  not Not | TBool 
TBool → (ExpBool) | bool | VarYVals | FuncBool
TCompare → EMat | VarsOps | VarYVals | FuncInt
